# FlashVSR_Ultra_Fast

./: .gitignore  main.py  nodes.py  pyproject.toml
src/models/: wan_video_dit.py
src/pipelines/: __init__.py  flashvsr_tiny.py
